[tool.poetry]
name = "bugbounty-helper"
version = "0.1.0"
description = ""
authors = ["Prajwol Pradhan <prajwol@uxcam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
httpx = "^0.27.2"
cvss = "^3.3"


[tool.poetry.group.dev.dependencies]
watchdog = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
